# z-grc-application

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HOME_DASHBOARD_IMPLEMENTATION.md  LICENSE  Makefile  README.md  clickhouse-config.xml  components.json  docker-compose.yaml  main.py  mkdocs.yml  otel-config.yaml  package-lock.json  package.json  pyproject.toml  skills-lock.json  tsconfig.json
.github/workflows/: docs.yml
docs/: index.md
docs/application/: deployment.md
docs/getting-started/: quickstart-application.md
docs/javascripts/: external-links.js
docs/stylesheets/: theme.css
public/: swagger.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx
src/clickhouse/: client.ts
src/components/: AuthCard.tsx  app-sidebar.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx
src/components/grc-keys/: CreateKeyDrawer.tsx  KeysTableSkeleton.tsx
src/components/groups/: AddMemberDrawer.tsx  CreateGroupDialog.tsx  EditQuotaDrawer.tsx  MembersTable.tsx
src/components/logs/: LogsFilters.tsx  (+2 more)
src/config/: env.config.ts  rbac.yaml
src/database/: index.ts
src/hooks/: useApplicationErrors.ts  useCostTrends.ts  useDashboardOverview.ts  useHomeStats.ts  usePermissions.ts  useRecentActivity.ts  useSystemHealth.ts  useTopCostUsage.ts
src/lib/: apikey.ts  auth-middleware.ts  auth.ts  breadcrumbs.ts  db.ts  rbac.ts  service-auth-middleware.ts  service-auth.ts  telemetry-queries.ts  telemetry.ts
src/types/: auth.ts  dashboard.ts  group.ts  rbac.ts  telemetry.ts
(+81 files in other folders)
