[project]
name = "z-grc-application"
version = "0.1.0"
description = "Governance, Risk & Compliance platform by Zeb Labs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21.2",
]
